<resources>
    <string name="app_name">Tugas2</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="buttonregister">Register</string>
    <string name="login">Login</string>
    <string name="forgotpass">Lupa Password?</string>
    <string name="username">Username</string>
    <string name="FrgPssEml">Masukkan E-Mail</string>
    <string name="resetpassword">Reset Password</string>
    <string name="punyaakun">Punya Akun?</string>
    <string name="beranda">Beranda</string>
    <string name="luckkt">Luckkt</string>
    <string name="kontak">Kontak Nomor Pemilik</string>
    <string name="sdh">"Sudah Punya Akun?</string>
    <string name="img">Image</string>
    <string name="phl">Nama Pahlawan</string>
    <string name="asl">Asal</string>
    <string name="tugas3">Tugas 2 dan 3</string>
    <string name="tugas4">Tugas 4 dan 5</string>
    <string name="mobilecom">Mobile Computing</string>
    <string name="namapnj">Galih Daniel Wicaksono</string>
    <string name="npm">23411033</string>
    <string name="tugas5">Tugas 5</string>
    <string name="profil">Galih Daniel Wicaksono lahir di Jayapura,
        Papua pada tanggal 17 September 2005. Ia merupakan alumni
        dari SD Kristen Baik, SMP YPPK Bonaventura, dan SMA Negeri 1 Sentani.
        Saat ini, Galih sedang menempuh pendidikan di USTJ.
        Aplikasi ini dibuat sebagai bagian dari tugas Ujian Tengah Semester (UTS).</string>
    <string name="prof">Profil</string>
    <string name="cnfrmpass">Confirm Password</string>
</resources>